# pomodoro-ai

./: .env.example  .gitignore  .python-version  LICENSE  api_key.key  environment.yml  full_requirements.txt  latestrequirements.txt  new_requirements.txt  pomodoro.py  pyproject.toml  readme.md  requirements.py  requirements.txt  settings.json  setup.py  speech_output.opus  test-speechtotext.py  ui.py  voice_test.py
pomodoro-ai-env/: pyvenv.cfg
resources/: tomato_icon.icns
testing/: testaudio-nogui.py  testaudio.py  voice_test.py
utils/: ai_utils.py  audio_utils.py  database.py  settings.py  ui.py  voice_assistant.py  window_utils.py
